# eval-sandbox

./: .gitignore  trust-policy.json
.github/workflows/: deploy-aws-resources.yml  deploy-dev.yml
aws-resources/: cdk.json  package-lock.json  package.json  ssm-getparameter-policy.json  trust-policy.json
aws-resources/docs/: 操作记录.md
aws-resources/lambda/: eval_trigger.py
aws-resources/lib/: aws-resources-stack.ts  ecs-eval-stack.ts  ecs-stack.ts  github-oidc-role-stack.ts  lambda-eval-trigger-stack.ts  training-stack.ts
aws-resources/scripts/: reset-cdk-bootstrap.sh  run-training-task.sh
cdk/: app.py  cdk.json  codebuild_stack.py  pyproject.toml
cdk/cdk.out/: EvalSandboxCodeBuild.assets.json  EvalSandboxCodeBuild.template.json  EvalSandboxECR.assets.json  EvalSandboxECR.template.json  manifest.json  tree.json
cdk/lambda_functions/: log_processor.py
cdk/stacks/: cloudwatch_stack.py  codebuild_stack.py  ecr_stack.py  ecs_stack.py  iam_stack.py  lambda_stack.py  s3_stack.py  ssm_stack.py  vpc_stack.py
cdk/stacks/lambda_functions/: log_processor.py
eval/: definition-dev.json  eval.py  main.py  run-dev.json
eval/docker/: buildspec.yml  dockerfile
train/: train.py
